force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField> 