force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey__c/fields/Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_URL__c</fullName>
    <label>Public URL</label>
    <type>Url</type>
    <inlineHelpText>Base URL for the public survey (e.g., https://your-site.com/s/survey). Not automatically populated.</inlineHelpText>
</CustomField> 