force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey__c/fields/Require_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Require_Passcode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Passcode</label>
    <type>Checkbox</type>
</CustomField>