force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey__c/fields/Thank_You_Message__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Message__c</fullName>
    <label>Thank You Message</label>
    <type>Html</type>
    <length>131072</length>
</CustomField> 