force-app/main/UtilityComponents/dynamicSurveyCreator/objects/Survey__c/fields/Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message__c</fullName>
    <label>Welcome Message</label>
    <type>Html</type>
    <length>131072</length>
</CustomField> 